switching to a sqlite database, registring data and working on cretificate_detail designe

--- a/blog/static/blog/css/project.css
+++ b/blog/static/blog/css/project.css
@@ -4,3 +4,16 @@
 .child-max-400px > * {
     max-width: 400px;
 }
+iframe {
+    height:350px
+}
+@media (min-width:620px) {
+    iframe {
+        height:450px
+    }   
+}
+@media (min-width:992px) {
+    iframe {
+        height:600px
+    }   
+}
