--- a/blog/templates/blog/certificates/certificate_list.html
+++ b/blog/templates/blog/certificates/certificate_list.html
@@ -4,6 +4,8 @@
 
 {% block script %}
 <link rel="stylesheet" href="{% static 'blog/css/components/project_card.css' %}">
+<link rel="stylesheet" href="{% static 'blog/css/components/certificate_card.css' %}">
+
     <link rel="stylesheet" href="{% static 'blog/css/project.css' %}">
 {% endblock script %}
     
@@ -12,78 +14,11 @@
 {% block main %}
 <section class="projects container-fluid">
     <h1 class="text-center pt-4 mb-4">Certificates</h1>
-    {% comment %} <article class="row gap-4 row-cols-1 row-cols-sm-2 row-cols-lg-3 d-flex justify-content-evenly child-max-400px"> {% endcomment %}
-        <!-- TODO  -->
-        <!-- create a new display simialr to about display -->
 
-                {% for certificate in certificates %}
-                <div class="container">
-                    <!-- at the four elements i add margin block 4 for small screens -->
-                    <div class="row row-cols-1 row-cols-sm-2 d-flex flex-wrap justify-content-center justify-content-md-between ">
-
-                        <article class="col col-md-5 my-4 my-md-0">
-                            <h3>{{certificate.title}}</h3>
-                            <p>{{certificate.description | truncatewords:25 }}</p>
-                        </article>
-                        <figure class="col col-md-4  my-4 my-md-0">
-                            <img class="" src="{% static certificate.image %}" alt="{{certificate.title}}">
-                        </figure>
-                        <div class="col">
-                            <h4>Topics</h4>
-                            {% for topic in certificate.topics %}
-                            <li>{{topic}}</li>
-                            
-                            {% endfor %}
-                        </div>
-
-                        <div class="text-center d-grid align-items-center">
-                            <!-- excercises -->
-                            {% if certificate.excercises  %}
-                            <div>
-                                <span class="badge text-bg-light">
-                                    <img class="small-icon" src="{% static 'blog/images/github.svg' %}" alt="github icon">
-                                    <span>{{certificate.excercises}} Excercises</span>
-                                </span>
-                            </div>
-                            {% endif %}
-
-                            <!-- projects -->
-                            {% if certificate.project  %}
-                            <div>
-                                <span class="badge text-bg-light">
-                                    <img class="small-icon" src="{% static 'blog/images/globe-solid.svg' %}" alt="globe icon">
-                                    <span>{{certificate.project}} Project{{ certificate.project | pluralize }}</span>
-                                </span>
-                            <div>
-                            
-                            {% endif %}
-                            <a class="btn btn-primary" href="http://localhost:8000/certificate/{{certificate.slug}}"> Click for see more...</a>
+    {% for certificate in certificates %}
+        {% include "blog/home_components/certificate_components/certificate_card.html" with certificate=certificate %}
+    {% endfor %}
                 
-                            {% comment %} <a class="btn btn-primary" href="{{certificate.get_absolute_url}}"> Click for see more...</a> {% endcomment %}
-                        </div>
-                       
-                    </div>
-                </div>
-                {% endfor %}
-                        
-                        <!-- i had an extra div for swap the img and text in small screens -->
-                        {% comment %} <div class="row d-flex flex-wrap-reverse my-md-5 justify-content-center justify-content-md-between">
-    
-                            <figure class="about-svg  col-10 col-md-5 my-4 my-md-0">
-                                <img class="" src="{% static 'blog/images/desktop_ds.svg' %}" alt="a person designing an desktop User interface">
-                            </figure>
-                            <p class=" col-10 col-md-5  my-4 my-md-0" >
-                                Inicialmente mi acercamiento a la programacion se dio con la automatizacion de pequenas tareas
-                                ha sido en el area de la creacion de sites que he tenido interaccion con clientes.
-                                Actualmente vivo en Brasil, tengo un dominio basico del ingles, intermedio del portugues y el espanol
-                                es mi idioma nativo.
-                            </p>
-                        </div>
-                    
-                    </div> {% endcomment %}
-    
-        {% comment %} {% include "blog/home_components/certificate_components/certificate_card.html" with certificates=certificates %} {% endcomment %}
-    {% comment %} </article> {% endcomment %}
     </section>
         
 {% endblock main %}
