--- a/blog/static/blog/css/general.css
+++ b/blog/static/blog/css/general.css
@@ -41,6 +41,9 @@ main {
     min-height: 100vh;
     
 }
+section:not(:first-child) {
+    padding-block: 40px;
+}
 img {
     width: 100%;
 }
@@ -115,4 +118,7 @@ main {
     width: 12px;
     position: relative;
     top:-1px;
+}
+.icon-me-1 {
+    margin-right: 5px;
 }
