--- a/blog/templates/blog/home_components/certificate_components/certificate_card.html
+++ b/blog/templates/blog/home_components/certificate_components/certificate_card.html
@@ -1,71 +1,82 @@
 {% load static %}
 
+<section id="{{certificate.slug}}" class="certificate-section">
+    <!-- at the four elements i add margin block 4 for small screens -->
+    <div class="row d-flex flex-wrap justify-content-center justify-content-md-between g-4">
 
-<!-- <div class="d-flex flex-wrap justify-content-between"> -->
-<div class="container-fluid">
-    <div class="row">
-    {% for certificate in certificates  %}
-        <div class="col-12 col-sm-6 col-md-10 mx-auto">
+        <article class="col-12 col-lg-5 my-4 my-lg-0">
+            <h3>{{certificate.title}}</h3>
+            <p class="m-0">{{certificate.description}}</p>
+        </article>
 
-            <div class="card overflow-hidden container-fluid mb-3 g-0">
-                <!-- this is like a container inside the card  -->
-                <!-- the classes row and card dosen't work together -->
-                <div class="row">
+        <figure class="col-12 col-lg-6 col-xxl-5 d-flex justify-align-center  my-4 my-lg-0">
+            <img style="object-fit:contain" class="" src="{{ certificate.image.url }}" alt="{{certificate.title}}">
+        </figure>
 
-                    <!-- when the screen is lg change the display inside the card -->
-                    <!-- image -->
-                    <div class="col-12 col-lg-6 pe-0">
-                        <figure class="certified-img">
-                            <img  src="{% static certificate.image %}" alt="{{certificate.title}}">
-                        </figure>
-                    </div>
-                
-
-                    <div class="col-12 col-lg-6 card-body d-flex flex-column justify-content-between text-center text-bg-dark">
-                        <div>
-                            <h4 class="card-title">
-                                <img class="icon-verified" src="{% static 'blog/images/verified.svg' %}" alt="icon verified">
-                                <span>{{certificate.title}}</span>
-                            </h4>
-
-                            <!-- topics  -->
-                            <div class="d-none d-lg-block text-center" >
-                                <h5 class="mb-3">Topics</h5>
-                                <ul class="row g-2 row-cols-2 ">
-                
-                                {% for topic in certificate.topics %}
-                                        <li class="col bullet-in">{{topic}}</li>
-                                {% endfor %}
-                                </ul>
-                            </div>
-                        </div>
-                        
-                        <div class="text-center mt-5">
-                            <!-- excercises -->
-                            {% if certificate.excercises  %}
-                                <span class="badge text-bg-light">
-                                    <img class="small-icon" src="{% static 'blog/images/github.svg' %}" alt="github icon">
-                                    <span>{{certificate.excercises}} Excercises</span>
-                                </span>
-                            {% endif %}
-
-                            <!-- projects -->
-                            {% if certificate.project  %}
-                                <span class="badge text-bg-light">
-                                    <img class="small-icon" src="{% static 'blog/images/globe-solid.svg' %}" alt="globe icon">
-                                    <span>{{certificate.project}} Project{{ certificate.project | pluralize }}</span>
-                                </span>
-                            {% endif %}
-                
-                            <h5 class="text-center mt-2 mb-3">Click for see more...</h5>
-                        </div>
-                    <!-- end body -->
-                    </div>
-                <!-- end card -->
-                </div>
-            <!-- end card-container a col -->
-            </div>
+        <div class="col-12 col-md-6 col-lg-6">
+            <h4>Topics</h4>
+            {% for topic in certificate.topics.all %}
+                <li>{{topic}}</li>
+            {% endfor %}
         </div>
-    {% endfor %}
+
+        <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-evenly text-start text-md-center">
+            <!-- source -->
+            <div>
+                <a class="nav-link" href="{{certificate.src}}" target="_blank">
+                <span class="badge text-bg-light">
+                    <img class="small-icon icon-me-1" src="{% static 'blog/icons/link-solid.svg' %}" alt="link icon">
+                    <span>Check the Certificate</span>
+                </span>
+            </a>
+            </div>
+            
+            <!-- cource page -->
+            <div>
+                <a class="nav-link" href="{{certificate.course}}" target="_blank">
+                <span class="badge text-bg-light">
+                    <img class="small-icon icon-me-1" src="{% static 'blog/icons/link-solid.svg' %}" alt="link icon">
+                    <span>Course Page</span>
+                </span>
+                </a>
+            </div> 
+            <!-- excercises -->
+            {% if certificate.excercises  %}
+            <div>
+                <span class="badge text-bg-light">
+                    <img class="small-icon icon-me-1" src="{% static 'blog/images/verified.svg' %}" alt="github icon">
+                    <span>{{certificate.excercises}} Excercises</span>
+                </span>
+            </div>
+            {% endif %}
+
+            <!-- projects -->
+            {% if certificate.project  %}
+            <div>
+                <span class="badge text-bg-light">
+                    <img class="small-icon icon-me-1" src="{% static 'blog/images/verified.svg' %}" alt="globe icon">
+                    <span>{{certificate.project}} Project{{ certificate.project | pluralize }}</span>
+                </span>
+            </div>
+            {% endif %}
+
+
+            <!-- availlable_projects -->
+            {% if certificate.available_projects  %}
+            <div>
+                {% for project in certificate.available_projects.all %}
+                <a class="nav-link" href="{{project.get_absolute_url}}" >
+                <span class="badge text-bg-light">
+                    <img class="small-icon icon-me-1" src="{% static 'blog/images/verified.svg' %}" alt="globe icon">
+                    <span>{{project.title}}</span>
+                </span>
+                </a>
+                {% endfor %}
+            </div>
+            {% endif %}
+            
+
+        </div>
+       
     </div>
-</div>
+</section>
