working on social network grid

--- a/blog/templates/blog/home_components/certificate_components/certificate_preview.html
+++ b/blog/templates/blog/home_components/certificate_components/certificate_preview.html
@@ -24,7 +24,7 @@
                     <div class="col-12 col-lg-6 card-body d-flex flex-column justify-content-between text-center text-bg-dark">
                         <div>
                             <h4 class="card-title">
-                                <img class="icon-verified" src="{% static 'blog/images/verified.svg' %}" alt="icon verified">
+                                <img class="icon-verified" src="{% static 'blog/icons/verified.svg' %}" alt="icon verified">
                                 <span>{{certificate.title}}</span>
                             </h4>
 
