--- a/blog/templates/blog/home_components/navbar_home.html
+++ b/blog/templates/blog/home_components/navbar_home.html
@@ -12,8 +12,8 @@
         </nav>
 
         <button id="navbar-btn" class="d-block d-md-none px-2 py-1 rounded-3 up">
-            <img id="bars" class="icon" src="{% static 'blog/images/bars-staggered.svg' %}" />
-            <img style="display:none;" id="x" class="icon" src="{% static 'blog/images/x.svg' %}" />
+            <img id="bars" class="icon" src="{% static 'blog/icons/bars-staggered.svg' %}" />
+            <img style="display:none;" id="x" class="icon" src="{% static 'blog/icons/x.svg' %}" />
         </button>
         
         
