--- a/blog/templates/blog/home_components/project_components/project_card.html
+++ b/blog/templates/blog/home_components/project_components/project_card.html
@@ -19,7 +19,7 @@
             {% comment %} github code {% endcomment %}
             {% if project.code  %}
                 <span class="badge text-bg-dark">
-                    <img class="small-icon" src="{% static 'blog/images/github.svg' %}" alt="github icon">
+                    <img class="small-icon" src="{% static 'blog/icons/github.svg' %}" alt="github icon">
                     <span>Code</span>
                 </span>
             {% endif %}
@@ -27,7 +27,7 @@
             {% comment %} online {% endcomment %}
             {% if project.online  %}
                 <span class="badge text-bg-dark">
-                    <img class="small-icon" src="{% static 'blog/images/globe-solid.svg' %}" alt="globe icon">
+                    <img class="small-icon" src="{% static 'blog/icons/globe-solid.svg' %}" alt="globe icon">
                     <span>Online</span>
                 </span>
             {% endif %}
@@ -35,7 +35,7 @@
             {% comment %} demo youtube {% endcomment %}
             {% if project.demo  %}
             <span class="badge text-bg-dark">
-                <img class="small-icon" src="{% static 'blog/images/youtube.svg' %}" alt="youtube icon">
+                <img class="small-icon" src="{% static 'blog/icons/youtube.svg' %}" alt="youtube icon">
                 <span>Demo</span>
             </span>
             {% endif %}
@@ -43,7 +43,7 @@
             {% comment %} certificate {% endcomment %}
             {% if project.certificate  %}
                 <span class="badge text-bg-dark">
-                    <img class="small-icon" src="{% static 'blog/images/verified.svg' %}" alt="certificate icon">
+                    <img class="small-icon" src="{% static 'blog/icons/verified.svg' %}" alt="certificate icon">
                     <span>Certificate</span>
                 </span>
             {% endif %}
@@ -51,7 +51,7 @@
             {% comment %} post {% endcomment %}
             {% if project.code  %}
                 <span class="badge text-bg-dark">
-                    <img class="small-icon" src="{% static 'blog/images/blog-solid.svg' %}" alt="Blog icon">
+                    <img class="small-icon" src="{% static 'blog/icons/blog-solid.svg' %}" alt="Blog icon">
                     <span>Post</span>
                 </span>
             {% endif %}
