--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -56,7 +56,7 @@
     width: 20px;
 }
 .bullet-in {
-    list-style: url('../images/circle-check-regular.svg');
+    list-style: url('../icons/circle-check-regular.svg');
     list-style-position:inside;
     padding-inline-start: 1ch;
 }
@@ -92,6 +92,42 @@ li::marker{
 }
 
 /* CONTACT */
+
+.social-icon {
+    /* width:min(30%, 100px) */
+    width: min(150px, 20%);
+}
+
+
+/* en prueba */
+.grid-social{
+    height: 500px;
+    width: 500px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "x x y y ."
+        "x y y y ."
+        ". . . . ."
+        ". . . . ."
+        ". . . . .";
+    }
+    
+
+.x { 
+    grid-area: x; 
+    background-color: red;
+}
+    
+.y {
+    grid-area: y; 
+    background-color: green;
+
+}
+      
 .email_form_container {
     padding: 1rem;
     border-radius: 10px;
