--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -110,16 +110,16 @@
             <div class="col-12 col-sm-11 mx-auto col-md-6">
                 <h3>This are my social network</h3>
 
-                <div class="grid-social">
+                <div class="h-100 position-relative">
+                    <img class="network-img" src="{% static 'blog/images/network.jpg' %}" alt="">
 
-
-                    <a href="https://github.com/keinermendoza/" class="nav-link col-auto" target="_blank">
+                    <a href="https://github.com/keinermendoza/" class="nav-link position-absolute net-icon github-icon" target="_blank">
                         <figure class="social-icon">
                             <img src="{% static 'blog/icons/github.svg' %}" alt="github icon">
                         </figure>
                     </a>
 
-                    <a href="https://www.youtube.com/channel/UCeZssHQPq4WT8K-_v0SfOPw" class="nav-link col-auto" target="_blank">
+                    <a href="https://www.youtube.com/channel/UCeZssHQPq4WT8K-_v0SfOPw" class="nav-link position-absolute net-icon youtube-icon" target="_blank">
                         <figure class="social-icon">
                             <img src="{% static 'blog/icons/youtube.svg' %}" alt="youtube icon">
                         </figure>
@@ -127,18 +127,19 @@
 
 
 
-                    <a href="https://www.linkedin.com/in/keiner-asael-mendoza-andrade-988ab594/" class="nav-link col" target="_blank">
+                    <a href="https://www.linkedin.com/in/keiner-asael-mendoza-andrade-988ab594/" class="nav-link position-absolute net-icon linkedin-icon" target="_blank">
                         <figure class="social-icon">
                             <img src="{% static 'blog/icons/linkedin.svg' %}" alt="linkedin icon">
                         </figure>
                     </a>
 
-                    <a href="https://twitter.com/Keiner_Mendoza" class="nav-link " target="_blank">
+                    <a href="https://twitter.com/Keiner_Mendoza" class="nav-link position-absolute net-icon twitter-icon" target="_blank">
                         <figure class="social-icon">
                             <img src="{% static 'blog/icons/square-x-twitter.svg' %}" alt="twitter icon">
                         </figure>
                     </a>
 
+            
 
                 </div>
             </div>
